Google site verifcation,sitemap.xml added

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sid Chopra</title>
+
+    <!-- Google HTML tag -->
+    <meta
+      name="google-site-verification"
+      content="2K8v9Eo92ljxe_Q5FuFV4edYdYuIsmcYzvh8O-YevRg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
